diesel_compile_tests/tests/fail/table_invalid_syntax_1.rs
#[macro_use]
extern crate diesel;

table! {
    12
    //~^ ERROR: macro expansion ignores `12` and any tokens following
}
//~^^^^ ERROR: invalid `table!` syntax

fn main() {}
