diesel_compile_tests/tests/fail/table_invalid_syntax_1.stderr
error: expected identifier
 --> tests/fail/table_invalid_syntax_1.rs:4:5
  |
4 |     12
  |     ^^
